--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheMovieDB">
-        <activity android:name=".view.ui.MovieDetailsActivity"></activity>
+        <activity android:name=".view.ui.activity.ReviewsActivity"></activity>
+        <activity android:name=".view.ui.MovieDetailsActivity" />
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name">
